--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-<!-- © 2025 Kaniuar Bacho. All Rights Reserved. -->
+/* © 2025 Kaniuar Bacho. All Rights Reserved. */
 ::selection {
     background-color: #7DF9FF;
 }
@@ -216,4 +216,4 @@ body {
     }
 }
 
-<!-- © 2025 Kaniuar Bacho. All Rights Reserved. -->
+/* © 2025 Kaniuar Bacho. All Rights Reserved. */
